--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -24,7 +24,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: compile with maven
-      run: mvn clean compile --file ./my-app/pom.xml 
+      run: mvn clean compile
 
     - name: Build with Maven
       run: mvn -B package --file ./my-app/pom.xml
