--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -20,12 +20,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: compile with maven
       run: mvn clean compile
 
     - name: Build with Maven
-      run: mvn -B package --file ./my-app/pom.xml
+      run: mvn -B package --file ../my-app/pom.xml
 
