--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -25,5 +25,5 @@ jobs:
       run: mvn clean compile
 
     - name: Build with Maven
-      run: mvn -B package --file ../my-app/pom.xml
+      run: mvn -B package --file /home/runner/work/maven-hello-world/maven-hello-world/my-app/pom.xml
 
