--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -15,15 +15,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '8'
         distribution: 'temurin'
 
     - name: compile with maven
-      run: mvn clean compile ../my-app/pom.xml
+      run: mvn clean compile ./my-app/pom.xml
 
     - name: Build with Maven
-      run: mvn -B package --file ../my-app/pom.xml
+      run: mvn -B package --file ./my-app/pom.xml
 
