--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
 
 on: [push]
@@ -22,8 +19,8 @@ jobs:
         distribution: 'temurin'
 
     - name: compile with maven
-      run: mvn clean compile ./my-app/pom.xml
+      run: mvn clean compile ../my-app/pom.xml
 
     - name: Build with Maven
-      run: mvn -B package --file ./my-app/pom.xml
+      run: mvn -B package --file ../my-app/pom.xml
 
