--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -19,8 +19,8 @@ jobs:
         distribution: 'temurin'
 
     - name: compile with maven
-      run: mvn clean compile my-app/pom.xml
+      run: mvn clean compile --file ../my-app/pom.xml
 
     - name: Build with Maven
-      run: mvn -B package --file my-app/pom.xml
+      run: mvn -B package --file ../my-app/pom.xml
 
