--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '8'
-        distribution: 'temurin'
+        distribution: 'adopt'
         
     - name: Build with Maven
-      run: mvn -B package --file ../my-app/pom.xml
+      run: mvn -B package -f ./my-app/
 
