--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -20,4 +20,6 @@ jobs:
         
     - name: Build with Maven
       run: mvn -B package -f ./my-app/
+    - name: placing jar
+      run: mkdir staging && cp target/*.jar staging
 
