--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -19,7 +19,7 @@ jobs:
         distribution: 'adopt'
         
     - name: Build with Maven
-      run: mvn -B package -f ./my-app/
+      run: mvn -B clean package -f ./my-app/
      
     - name: tree
       run: tree
