--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -25,5 +25,11 @@ jobs:
       run: tree
       
     - name: build docker image
-      run: docker build -t artifact ./my-app/
+      run: docker build -t maayanmi/artifact ./my-app/
+      
+    - name: login dockerhub
+      run: docker login -u maayanmi -p dckr_pat_Ss2xH7o8NeJ4zrgENxZH2X3VpWY
+      
+    - name: push to dockerhub
+      run: docker push maayanmi/artifact
 
