--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -34,5 +34,5 @@ jobs:
       run: docker push maayanmi/artifact
       
     - name: pull from dockerhub
-      run: docker run --name artifact maayanmi/artifact
+      run: docker run --name artifact -it maayanmi/artifact
 
