--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,3 +1,6 @@
+FROM ubuntu:latest
+RUN useradd -d /home/maayan maayan
+
 FROM openjdk:8-jre-alpine
 COPY target/my-app-1.0.0-SNAPSHOT.jar /app.jar
 CMD ["/usr/bin/java", "-jar", "/app.jar"]
