--- a/.github/workflows/github-actions-maven.yml
+++ b/.github/workflows/github-actions-maven.yml
@@ -11,14 +11,14 @@ jobs:
       packages: write
 
     steps:
-#     - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 #     - name: Set up JDK 8
 #       uses: actions/setup-java@v3
 #       with:
 #         java-version: '8'
 #         distribution: 'adopt'
-    - name: Setup Docker Buildxx
-      uses: docker/setup-buildx-action@v1
+      - name: Setup Docker Buildxx
+        uses: docker/setup-buildx-action@v1
         
 #     - name: Build with Maven
 #       run: mvn -B clean package -f ./my-app/
