--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,8 +1,6 @@
-FROM ubuntu:latest
-RUN useradd -m -p Nopassword javauser
-USER javauser
-
 FROM maven:3.8.6-jdk-8 AS build
+RUN useradd -m -p 123456 maayan
+USER maayan
 WORKDIR /home/my-app
 COPY src /home/my-app/src
 COPY pom.xml /home/my-app
