--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -10,6 +10,6 @@ RUN mvn -B clean package
 
 FROM openjdk:8-jre-alpine
 WORKDIR /app
-COPY --from=build /home/my-app/target/my-app-1.0.0-SNAPSHOT.jar /app.jar
+COPY --from=build /home/my-app/target/my-app-1.0.*-SNAPSHOT.jar /app.jar
 CMD ["/usr/bin/java", "-jar", "/app.jar"]
 
